# regression_ml_end2end

./: main.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/587267460494311921/: meta.yaml
mlruns/587267460494311921/049f0bab67744803a85ec581185fabc1/: meta.yaml
mlruns/587267460494311921/05823fc475b64ddf8ed1c5788691c797/: meta.yaml
mlruns/587267460494311921/12b250a623fa4ba2b630db390060a8ee/: meta.yaml
mlruns/587267460494311921/29df40e5ba0f427a8a81e43974112f56/: meta.yaml
mlruns/587267460494311921/328f80ce06524c9ea39f2a100e71b258/: meta.yaml
mlruns/587267460494311921/3d36c70fe8e340f99c21657b50f9a3ad/: meta.yaml
mlruns/587267460494311921/3ff9d0857af3474b8aa40ebd86395745/: meta.yaml
mlruns/587267460494311921/40c8e5651da34f1fb2c43d95b24c1f68/: meta.yaml
mlruns/587267460494311921/42becb178dcc4e48b323eb11a2ece37d/: meta.yaml
mlruns/587267460494311921/4b8adae2e6eb43b09c8920f48d66ccc8/: meta.yaml
mlruns/587267460494311921/5355130424054afc918a6a7f07af15c7/: meta.yaml
mlruns/587267460494311921/59918a98943b44fa8fe0db16e16719b4/: meta.yaml
mlruns/587267460494311921/5f1742d4718444b4839e90ea0f2a2fe7/: meta.yaml
mlruns/587267460494311921/7638074a0f75410b9016f7ae79fd61e7/: meta.yaml
mlruns/587267460494311921/8920ab2e0b2e4692810dd664265db5a6/: meta.yaml
mlruns/587267460494311921/abcad1e4dbcf4da4a9be385ecdac4751/: meta.yaml
notebooks/: 01_data_split.ipynb  02_EDA_cleaning.ipynb  03_feature_engineering.ipynb  04_baseline_model.ipynb  05_linear_regression_with_regularization.ipynb  06_XGBoost.ipynb  07_Hyperparameter_tuning_MLFlow.ipynb
(+201 files in other folders)
