[project]
name = "regression-ml-end2end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.10",
    "category-encoders>=2.9.0",
    "evidently>=0.7.17",
    "fastapi>=0.124.4",
    "great-expectations>=1.9.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
    "xgboost>=3.1.2",
]
